--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -18,12 +18,12 @@
             	<h4>altre informazioni su —</h4>
             	<div class="col-md-6">
                     <ul class="pages">
-                        <li><a href="#">come funziona</a></li>
-                        <li><a href="#">iniziative collegate</a></li>
-                        <li><a href="/progetti">progetti</a></li>
-                        <li><a href="#">Linee guida</a></li>
-                        <li><a href="#">Open data (OAI, ARK ...)</a></li>
-                        <li><a href="#">credits</a></li>
+                        <li><a href="/comefunziona">come funziona</a></li>
+                        <li><a href="/progetti">progetti e iniziative</a></li>
+                        <li><a href="/strumenti">strumenti</a></li>
+                        <li><a href="/lineeguida">Linee guida</a></li>
+                        <li><a href="/opendata">Open data (OAI, ARK ...)</a></li>
+                        <li><a href="/credits">credits</a></li>
                     </ul>
                 </div>
             	<div class="col-md-6">
