Sistemato riferimento in biblio

--- a/templates/risultati2.html
+++ b/templates/risultati2.html
@@ -265,7 +265,7 @@
               <tr><td><b>Collana: </b></td><td>{{field.collana}}</td></tr>
               <tr><td><b>Numero collana: </b></td><td>{{field.n_collana}}</td></tr>
               <tr><td><b>Autore: </b></td><td>{{field.autore_nome_cognome}}</td></tr>
-              <tr><td><b>Descrizione interna di riferimento: </b></td><td>{{field.Descrizione_interna_id}}</td></tr>
+              <tr><td><b>Manoscritto di riferimento: </b></td><td>{{field.Descrizione_Esterna_Segnatura}}</td></tr>
 
           </table><hr><br>
         {% endfor %}
@@ -283,7 +283,7 @@
               <tr><td><b>Numero fascicolo: </b></td><td>{{field.numero_fascicolo}}</td></tr>
               <tr><td><b>Nome rivista: </b></td><td>{{field.nome_rivista}}</td></tr>
               <tr><td><b>Autore: </b></td><td>{{field.autore_nome_cognome}}</td></tr>
-              <tr><td><b>Manoscritto di riferimento: </b></td><td>{{field.desc_est}}</td></tr>
+              <tr><td><b>Manoscritto di riferimento: </b></td><td>{{field.Descrizione_Esterna_Segnatura}}</td></tr>
 
           </table><hr><br>
           {% endfor %}
@@ -300,7 +300,7 @@
               <tr><td><b>Numero pagine: </b></td><td>{{field.numero_pagine}}</td></tr>
               <tr><td><b>Curatore: </b></td><td>{{field.curatore_nome_cognome}}</td></tr>
               <tr><td><b>Autore: </b></td><td>{{field.autore_nome_cognome}}</td></tr>
-              <tr><td><b>Manoscritto di riferimento: </b></td><td>{{field.desc_est}}</td></tr>
+              <tr><td><b>Manoscritto di riferimento: </b></td><td>{{field.Descrizione_Esterna_Segnatura}}</td></tr>
 
           </table><hr><br>
           {% endfor %}
@@ -319,7 +319,7 @@
               <tr><td><b>Collana: </b></td><td>{{field.collana}}</td></tr>
               <tr><td><b>Numero collana: </b></td><td>{{field.n_collana}}</td></tr>
               <tr><td><b>Curatore: </b></td><td>{{field.curatore_nome_cognome}}</td></tr>
-              <tr><td><b>Manoscritto di riferimento: </b></td><td>{{field.desc_est}}</td></tr>
+              <tr><td><b>Manoscritto di riferimento: </b></td><td>{{field.Descrizione_Esterna_Segnatura}}</td></tr>
 
           </table><hr><br>
 
