--- a/templates/credits.html
+++ b/templates/credits.html
@@ -31,7 +31,7 @@
         Il sito utilizza per la maggior parte strumenti open-source. Ringraziamo 
         Ruven Pillay per l'image server IIP (il logo IIP è Copyright © 2021 Ruven Pillay).
         
-        Armin Ronacher e la comunity del framework Flask. 
+        Armin Ronacher e la community del framework Flask. 
 
         Il sito è realizzato usando Bootstrap v.5 il template del footer è dell'utente sargbah84.
         </section>
