--- a/templates/index.html
+++ b/templates/index.html
@@ -65,10 +65,10 @@
     <div class="row align-items-center py-5 mx-auto">
 
       <div class="col-md">
-        <h6>VISUALIZZA I DATI SULLA COLLEZZIONE</h6>
-        <h1>Metodi innovativi per visualizzare ed esploare la collezzione</h1>
+        <h6>VISUALIZZA I DATI SULLA COLLEZIONE</h6>
+        <h1>Metodi innovativi per visualizzare ed esploare la collezione</h1>
         <p>Oltre ad una catalogazione approfondita dei beni contenuti, il prgetto prevede la collaborazione con il dipartimento di Informatica 
-          dell'Università di Verona per mettere a disposizione nuovi modi per studiare la collezzione.
+          dell'Università di Verona per mettere a disposizione nuovi modi per studiare la collezione.
         </p>
       </div>
       
@@ -107,9 +107,9 @@
     </div>
     <div class="text col-lg-6 col-md-12 col-12 w-50">
       <h6>ESPLORA</h6>
-      <h1>Metodi innovativi per visualizzare ed esploare la collezzione</h1>
+      <h1>Metodi innovativi per visualizzare ed esploare la collezione</h1>
       <p>Il prgetto prevede la collaborazione con il dipartimento di Informatica 
-        dell'Università di Verona per mettere a disposizione nuovi modi per studiare la collezzione.
+        dell'Università di Verona per mettere a disposizione nuovi modi per studiare la collezione.
         Oltre ad una catalogazione approfondita dei beni contenuti.
 
       </p>
