--- a/templates/strumenti.html
+++ b/templates/strumenti.html
@@ -7,7 +7,7 @@
         <div class="sidenav strumenti">
             <a href="#intro"> - Introduzione</a>
             <p><b>Hardware:</b></p>
-            <a href="#catalog">Sistema digtalizzazione Nikon D810</a>
+            <a href="#catalog">Sistema digitalizzazione Nikon D810</a>
             <a href="#conserv">Sistema multispettrale PhaseOne RAINBOW</a>
             <a href="#digital">Spettrometri Zeiss</a>
             <a href="#digital">Sistema profilazione i1Publish Pro 3</a>
