--- a/templates/comefunziona.html
+++ b/templates/comefunziona.html
@@ -12,7 +12,7 @@
             <a href="#iiif">Sfruttare il protocollo IIIF</a>
             <a href="#rice">Ricerca avanzata</a>
             <a href="#cita">Citare i manoscritti (Zotero)</a>
-            <a href="#aapi">Acesso alle API</a>
+            <a href="#aapi">Accesso alle API</a>
             <a href="#bknd">Back-end</a>
         </div>
         <div class="col-md-7 col-sm-6">
@@ -50,7 +50,7 @@
             <p></p>
         </section>
         <section id="aapi">
-            <h3> Acesso alle API</h3>
+            <h3> Accesso alle API</h3>
             <p></p>
         </section>
         <section id="bknd">
